update(FilePage): correct file page's filetypes buttons'width on mobile (#150)

--- a/components/tailored/files/controls/Controls.less
+++ b/components/tailored/files/controls/Controls.less
@@ -25,13 +25,13 @@
   }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 576px) {
   #file-controls {
     display: block;
     min-width: @viewport-width - 20px;
     .file-type {
       .select {
-        width: 100%;
+        // width: 100%;
       }
     }
     & > div {
